test/integration/semantic/operations3.pal
{14,15,16}
{
    Test that operations work
}
program test(input, output);
var
	i : integer;
	b : Boolean;
	r : real;
begin
	// +
	
	i := i + i;
	i := r + i;	// error
	i := i + r;	// error
	i := i + r;	// error
	
	r := r + r;
	r := r + i;
	r := r + r;
	r := i + i;
	
end.
